Initial Site setup and changes

--- a/src/evangelist-site/appsettings.json
+++ b/src/evangelist-site/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "BetaConnection": "Server=(localdb)\\mssqllocaldb;Database=evangelist-site-db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:amykatenichodbserver.database.windows.net,1433;Initial Catalog=amykatenicho_db;Persist Security Info=False;User ID=amykatenicho;Password={password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -14,24 +14,24 @@
     "Webroot": "http://evangelist.co.uk",
     "BlogFeed": "http://evangelist/feed",
     "BlogUrl": "http://evangelist.azurewebsites.net",
-    "Title": "Hi, I'm Generic Evangelist, an evangelist at Microsoft",
-    "FullName": "Generic Evangelist",
-    "ShortName": "GenericE",
-    "FirstName": "Gen",
-    "ShortDescription": "I'm an evangelist at Microsoft",
-    "Technologies": "CloudServer, X++ & Virtual Data Server 2017",
-    "Location": "Thames Valley Park",
-    "Twitter": "@genericevangelist",
-    "TwitterHome": "https://twitter.com/genericevangelist",
-    "LinkedInHome": "https://uk.linkedin.com/in/genericevangelist",
-    "SkypeHome": "skype:genericevangelist",
-    "GithubHome": "https://github.com/genericevangelist",
-    "StackOverflowHome": "http://stackoverflow.com/users/11111/genericevangelist",
-    "EmailAddress": "genericevangelist@microsoft.com",
+    "Title": "Hi, I'm Amy, a Technical Evangelist at Microsoft",
+    "FullName": "Amy Nicholson",
+    "ShortName": "AmyKateNicho",
+    "FirstName": "Amy",
+    "ShortDescription": "I'm a cloud technical evangelist at Microsoft",
+    "Technologies": "Data Science, Machine Learning and IoT",
+    "Location": "Warwickshire UK",
+    "Twitter": "@amykatenicho",
+    "TwitterHome": "https://twitter.com/amykatenicho",
+    "LinkedInHome": "https://uk.linkedin.com/in/amykatenicho",
+    "SkypeHome": "skype:amy.kate.nicholson",
+    "GithubHome": "https://github.com/amykatenicho",
+    "StackOverflowHome": "http://stackoverflow.com/users/5571510/amykatenicho",
+    "EmailAddress": "amynic@microsoft.com",
     "Bio": {
-      "FirstPerson": "First person Bio",
-      "ThirdPerson": "Third person Bio",
-      "Short": "Short Bio"
+      "FirstPerson": "I am a Technical Evangelist at Microsoft UK having obtained a Computer Science degree and completed an internship at Bing, Microsoft’s search engine. I am passionate about Data Science, Machine Learning and Internet of things; and am always keen to share my knowledge. I help customers to envision, design and build their cloud solutions. You will find some of my content online as well as my presence at in person events such as TechNet UK, Devoxx, SQL Bits and Reasons to be Creative.",
+      "ThirdPerson": "Amy Nicholson is a Technical Evangelist at Microsoft UK having obtained a Computer Science degree and completing an internship at Bing, Microsoft’s search engine. She is passionate about Data Science, Machine Learning and Internet of things; and is always keen to share her knowledge. Amy helps customers to envision, design and build their cloud solutions. You will find her sharing content online and at in person events such as TechNet UK, Devoxx, SQL Bits and Reasons to be Creative.",
+      "Short": "Amy Nicholson is a Technical Evangelist at Microsoft UK having obtained a degree in Computer Science. She is passionate about Data Science, Machine Learning and IoT. Amy helps customers to envision, design and build their cloud solutions. You will find her sharing content online and at in person events."
     }
   }
 }
